add stuff and fix stuff for first complete build of all projects using the new metamodels and the new reactions